Fix twitter button alignment

--- a/static/less/entity.less
+++ b/static/less/entity.less
@@ -147,5 +147,6 @@ td.btn-more {
     }
     #send-to-twitter {
         margin-left: 5px;
+        vertical-align: top;
     }
 }
